misc/tree-sitter-rusk/grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._item)),

    shebang: (_) => token(seq("#!", /.*/)),

    _item: ($) =>
      choice(
        $.function_item,
        $.extern_function_item,
        $.intrinsic_function_item,
        $.struct_item,
        $.enum_item,
        $.interface_item,
        $.impl_item,
        $.module_item,
        $.use_item,
        $.derive_item,
      ),

    visibility: (_) => "pub",

    function_item: ($) =>
      seq(
        optional(field("visibility", $.visibility)),
        "fn",
        field("name", $._identifier),
        field("type_parameters", optional($.generic_parameters)),
        field("parameters", $.parameters),
        field("return_type", optional($.return_type)),
        field("body", $.block),
      ),

    intrinsic_function_item: ($) =>
      seq(
        optional(field("visibility", $.visibility)),
        "intrinsic",
        "fn",
        field("name", $._identifier),
        field("type_parameters", optional($.generic_parameters)),
        field("parameters", $.parameters),
        field("return_type", optional($.return_type)),
        ";",
      ),

    struct_item: ($) =>
      seq(
        optional(field("visibility", $.visibility)),
        "struct",
        field("name", $._identifier),
        field("type_parameters", optional($.generic_parameters)),
        choice($.named_struct_body, $.newtype_struct_body),
      ),

    named_struct_body: ($) =>
      seq("{", optional($.field_declarations), "}"),

    newtype_struct_body: ($) => seq("(", field("type", $._type), ")", ";"),

    field_declarations: ($) =>
      commaSep1(field("field", $.field_declaration)),

    field_declaration: ($) =>
      seq(field("name", $._identifier), ":", field("type", $._type)),

    enum_item: ($) =>
      seq(
        optional(field("visibility", $.visibility)),
        "enum",
        field("name", $._identifier),
        field("type_parameters", optional($.generic_parameters)),
        "{",
        optional(commaSep1($.enum_variant)),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        field("name", $._identifier),
        optional(field("fields", $.tuple_type_list)),
      ),

    interface_item: ($) =>
      seq(
        optional(field("visibility", $.visibility)),
        "interface",
        field("name", $._identifier),
        field("type_parameters", optional($.generic_parameters)),
        field("supers", optional($.interface_supers)),
        field("body", $.interface_body),
      ),

    interface_body: ($) => seq("{", repeat($.interface_member), "}"),

    interface_member: ($) =>
      choice($.associated_type_declaration, $.interface_method),

    associated_type_declaration: ($) => seq("type", field("name", $._identifier), ";"),

    interface_method: ($) =>
      seq(
        optional(field("qualifier", choice("readonly", "static"))),
        "fn",
        field("name", $._identifier),
        field("type_parameters", optional($.generic_parameters)),
        field("parameters", $.parameters),
        field("return_type", optional($.return_type)),
        choice(";", field("body", $.block)),
      ),

    impl_item: ($) =>
      seq(
        "impl",
        field("type_parameters", optional($.generic_parameters)),
        field("header", $.impl_header),
        "{",
        repeat($.impl_member),
        "}",
      ),

    impl_header: ($) =>
      choice(
        seq(field("type", $.path_type_no_assoc_bindings)),
        seq(
          field("interface", $.path_type_no_assoc_bindings),
          "for",
          field("type", $.path_type_no_assoc_bindings),
        ),
      ),

    impl_member: ($) => choice($.impl_associated_type, $.impl_method),

    impl_associated_type: ($) =>
      seq("type", field("name", $._identifier), "=", field("type", $._type), ";"),

    impl_method: ($) =>
      seq(
        optional(field("qualifier", choice("readonly", "static"))),
        "fn",
        field("name", $._identifier),
        field("type_parameters", optional($.generic_parameters)),
        field("parameters", $.parameters),
        field("return_type", optional($.return_type)),
        field("body", $.block),
      ),

    module_item: ($) =>
      seq(
        optional(field("visibility", $.visibility)),
        "mod",
        field("name", $._identifier),
        choice(";", field("body", $.module_body)),
      ),

    module_body: ($) => seq("{", repeat($._item), "}"),

    use_item: ($) =>
      seq(
        optional(field("visibility", $.visibility)),
        "use",
        field("path", $.path_expression),
        optional(seq("as", field("alias", $._identifier))),
        ";",
      ),

    derive_item: ($) =>
      seq(
        "derive",
        field("derives", commaSep1Plus(field("derive", $._identifier))),
        "for",
        field("target", $._identifier),
        ";",
      ),

    // ---- Statements / Blocks ----

    block: ($) =>
      seq(
        "{",
        repeat($._statement),
        optional(field("tail", $._expression)),
        "}",
      ),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.const_statement,
        $.readonly_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.expression_statement,
      ),

    let_statement: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
        ";",
      ),

    expression_statement: ($) =>
      choice(
        seq($._block_like_expression, optional(";")),
        seq($._non_block_expression, ";"),
      ),

    _block_like_expression: ($) =>
      choice($.block, $.if_expression, $.match_expression, $.loop_expression, $.while_expression, $.for_expression),

    _non_block_expression: ($) =>
      choice(
        $.assignment_expression,
        $.binary_expression,
        $.as_expression,
        $.is_expression,
        $.unary_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.non_block_primary_expression,
      ),

    _expression: ($) =>
      choice(
        $.assignment_expression,
        $.binary_expression,
        $.as_expression,
        $.is_expression,
        $.unary_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.primary_expression,
      ),

    // 与 `_expression` 相同，但不把单独的 `{ ... }` 作为一个表达式分支（仍允许 `{...}(...)` 这类“以 block 开头”的 call）。
    _expression_no_block: ($) =>
      choice(
        $.assignment_expression,
        $.binary_expression,
        $.as_expression,
        $.is_expression,
        $.unary_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.primary_expression_no_block,
      ),

    // 用于 `if cond { ... }` / `match scrutinee { ... }` / `while cond { ... }` / `for .. in iter { ... }`
    // 这类“紧跟一个 block”的表达式位置：
    // - 禁止 `Foo { ... }` 直接作为 struct literal（需要写成 `(Foo { ... })`）
    // - 禁止 `foo { ... }` 直接作为 trailing block closure（需要写成 `(foo { ... })`）
    //
    // 与编译器里 `parse_expr_no_struct_lit` 的行为保持一致。
    _expression_no_struct_lit: ($) =>
      choice(
        $.assignment_expression_no_struct_lit,
        $.binary_expression_no_struct_lit,
        $.as_expression_no_struct_lit,
        $.is_expression_no_struct_lit,
        $.unary_expression_no_struct_lit,
        $.call_expression_no_struct_lit,
        $.field_expression_no_struct_lit,
        $.index_expression_no_struct_lit,
        $.primary_expression_no_struct_lit,
      ),

    primary_expression: ($) =>
      choice(
        $.literal,
        $.path_expression,
        $.array_expression,
        $.tuple_expression,
        $.struct_literal,
        $.effect_call,
        $.lambda_expression,
        $.if_expression,
        $.match_expression,
        $.loop_expression,
        $.while_expression,
        $.for_expression,
        $.block,
        $.parenthesized_expression,
      ),

    primary_expression_no_block: ($) =>
      choice(
        $.literal,
        $.path_expression,
        $.array_expression,
        $.tuple_expression,
        $.struct_literal,
        $.effect_call,
        $.lambda_expression,
        $.if_expression,
        $.match_expression,
        $.loop_expression,
        $.while_expression,
        $.for_expression,
        $.parenthesized_expression,
      ),

    primary_expression_no_struct_lit: ($) =>
      choice(
        $.literal,
        $.path_expression,
        $.array_expression,
        $.tuple_expression,
        $.effect_call,
        $.lambda_expression,
        $.if_expression,
        $.match_expression,
        $.loop_expression,
        $.while_expression,
        $.for_expression,
        $.block,
        $.parenthesized_expression,
      ),

    argument_list_items: ($) => commaSep1(field("argument", $._expression)),

    match_expression: ($) =>
      seq(
        "match",
        field("scrutinee", $._expression_no_struct_lit),
        "{",
        repeat($.match_arm),
        "}",
      ),

    match_arm: ($) =>
      seq(
        field("pattern", choice($.effect_pattern, $._pattern)),
        "=>",
        field("body", choice($.block, $._expression_no_block)),
        optional(","),
      ),

    array_expression: ($) => seq("[", optional(commaSep1(field("item", $._expression))), "]"),

    tuple_expression: ($) =>
      seq("(", field("first", $._expression), ",", optional($.argument_list_items), ")"),

    struct_type_path: ($) =>
      seq(repeat(seq($._path_segment, "::")), field("name", $.type_identifier)),

    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.literal_pattern,
        $.tuple_pattern,
        $.array_pattern,
        $.struct_pattern,
        $.constructor_pattern,
        $.enum_pattern,
        $.binding_pattern,
      ),

    wildcard_pattern: ($) => field("wildcard", $.wildcard),

    binding_pattern: ($) => field("name", $._identifier),

    enum_pattern: ($) =>
      // Bare enum variant: `EnumPath::Variant`
      seq(field("path", $.qualified_identifier)),

    constructor_pattern: ($) =>
      // Constructor-like pattern (resolved during typechecking):
      // - enum variant with fields: `EnumPath::Variant(p1, p2)`
      // - new-type struct: `TypePath(p)`
      seq(field("path", $.path_expression), field("arguments", $.pattern_arguments)),

    pattern_arguments: ($) =>
      seq("(", optional(commaSep1(field("argument", $._pattern))), ")"),

    struct_pattern: ($) =>
      seq(
        field("type", $.struct_type_path),
        "{",
        optional(commaSep1(field("field", $.struct_pattern_field))),
        "}",
      ),

    struct_pattern_field: ($) =>
      choice(
        "..",
        seq(
          field("name", $._identifier),
          optional(seq(":", field("pattern", $._pattern))),
        ),
      ),

    tuple_pattern: ($) =>
      choice(
        // Unit pattern.
        "()",
        // Tuple pattern with leading rest: `(..rest)`
        seq("(", field("rest", $.rest_pattern), ")"),
        // Parenthesized pattern: `(p)`
        seq("(", field("pattern", $._pattern), ")"),
        // Tuple pattern: `(a, b)` / `(a,)` / `(..rest, a, b)`
        $.pattern_tuple,
      ),

    pattern_tuple: ($) =>
      seq(
        "(",
        field("item", choice($._pattern, $.rest_pattern)),
        ",",
        optional(commaSep1(field("item", choice($._pattern, $.rest_pattern)))),
        ")",
      ),

    rest_pattern: ($) => seq("..", optional(field("name", $._identifier))),

    array_pattern: ($) =>
      seq(
        "[",
        optional(commaSep1(field("item", choice($._pattern, $.rest_pattern)))),
        "]",
      ),

    // `()` 在 pattern 位置由 `tuple_pattern` 的 unit pattern 分支负责解析；
    // 这里刻意排除 `unit_literal` 以避免与 `tuple_pattern` 产生歧义冲突。
    _type: ($) => choice($.readonly_type, $.type_atom),

    type_atom: ($) =>
      choice(
        $.unit_type,
        $.primitive_type,
        $.array_type,
        $.function_type,
        $.continuation_type,
        $.tuple_type,
        $.parenthesized_type,
        $.path_type,
      ),

    primitive_type: (_) =>
      choice("unit", "bool", "int", "float", "byte", "char", "string", "bytes", "!"),

    tuple_type: ($) =>
      seq(
        "(",
        field("type", $._type),
        ",",
        optional(commaSep1(field("type", $._type))),
        ")",
      ),

    tuple_type_list: ($) =>
      seq("(", optional($.type_list), ")"),

    type_list: ($) => commaSep1(field("type", $._type)),

    return_type: ($) => seq("->", field("type", $._type)),

    parameters: ($) => seq("(", optional($.parameter_list), ")"),

    parameter_list: ($) => commaSep1(field("parameter", $.parameter)),

    parameter: ($) =>
      seq(
        optional(field("readonly", "readonly")),
        field("pattern", $._pattern),
        ":",
        field("type", $._type),
      ),

    path_type_no_assoc_bindings: ($) =>
      seq($.path_type_segment, repeat(seq("::", $.path_type_segment))),

    path_type: ($) =>
      seq(
        $.path_type_segment,
        repeat(seq("::", $.path_type_segment)),
        optional(field("assoc_bindings", $.assoc_bindings)),
      ),

    path_type_segment: ($) =>
      seq(
        field("name", $._identifier),
        optional(field("type_arguments", $.generic_arguments)),
      ),

    generic_parameters: ($) =>
      seq("<", commaSep1(field("parameter", $.generic_parameter)), ">"),

    generic_parameter: ($) =>
      seq(
        field("name", $._identifier),
        optional(field("hkt_arity", $.hkt_arity)),
        optional(field("bounds", $.bounds)),
      ),

    generic_arguments: ($) =>
      seq("<", commaSep1(field("argument", $._type)), ">"),

    // ---- Identifiers / Paths ----

    wildcard: (_) => token(prec(2, "_")),

    identifier: (_) => token(prec(0, /[_\p{XID_Start}][_\p{XID_Continue}]*/u)),

    type_identifier: (_) => token(prec(1, /[A-Z][A-Za-z0-9_]*/)),

    _identifier: ($) => choice($.identifier, $.type_identifier),

    _path_segment: ($) => choice($.identifier, $.type_identifier),

    qualified_identifier: ($) =>
      seq(
        field("head", $._path_segment),
        repeat1(seq("::", field("segment", $._path_segment))),
      ),

    path_expression: ($) =>
      seq(field("head", $._path_segment), repeat(seq("::", field("segment", $._path_segment)))),

    // ---- Literals ----

    literal: ($) =>
      choice(
        $.unit_literal,
        $.bool_literal,
        $.int_literal,
        $.float_literal,
        $.char_literal,
        $.string_literal,
        $.bytes_literal,
        $.formatted_string_literal,
      ),

    unit_literal: (_) => "()", // expression form

    int_literal: (_) =>
      token(
        choice(
          /0x[0-9a-fA-F](?:[0-9a-fA-F_])*/,
          /0o[0-7](?:[0-7_])*/,
          /0b[01](?:[01_])*/,
          /[0-9](?:[0-9_])*/,
        ),
      ),
